--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "engines":{
+    "node": "8.11.1"
+  },
+  "author": "Angela Babarada Udemy courses",
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0"
